# cancer-prediction-rkd43-2

./: 404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-and-publish.yml  documentation.yml  tests.yml
1_setting_up/: index.html
2_project_overview/: index.html
3_poetry/: index.html
4_Testing/: index.html
5_CICD/: index.html
CICD/: index.html
CICD/documentation/: index.html
CICD/precommit/: index.html
CICD/publishing/: index.html
CICD/testing/: index.html
Home/LICENSE/: index.html
Home/about/: index.html
Home/workshop/: index.html
LICENSE/: index.html
cancer-prediction/cancer_model/: index.html
cancer-prediction/streamlit_app/: index.html
cancer_prediction/: cancer_model.py  streamlit_app.py
docs/: index.md
publishing_docs/documentation/: index.html
publishing_docs/publishing/: index.html
resources/: index.html
resources/references/: index.html
resources/slides/: index.html
