[tool.poetry]
name = "cancer-prediction-rkd43-2"
version = "0.1.0"
description = "A basic model to predict cancerous tumors based on tumor properties."
authors = ["Ryan Daniels <31715811+rkdan@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction =  "cancer_prediction.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "0.9.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
